<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lab 1 LinearLayout</string>
    <string name="lab_title">Lab 1</string>
    <string name="responsive_title">Responsive Layout 1</string>
    <string name="this_text">This</string>
    <string name="is_text">is</string>
    <string name="my_text">my</string>
    <string name="first_text">first</string>
    <string name="android_application">Android Application</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
</resources>
